pkg/plugins/policies/meshhttproute/plugin/v1alpha1/testdata/request-mirror-real-resources.listeners.golden.yaml
resources:
- name: outbound:127.0.0.1:10001
  resource:
    '@type': type.googleapis.com/envoy.config.listener.v3.Listener
    address:
      socketAddress:
        address: 127.0.0.1
        portValue: 10001
    filterChains:
    - filters:
      - name: envoy.filters.network.http_connection_manager
        typedConfig:
          '@type': type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          httpFilters:
          - name: envoy.filters.http.router
            typedConfig:
              '@type': type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
          internalAddressConfig:
            cidrRanges:
            - addressPrefix: 127.0.0.1
              prefixLen: 32
          normalizePath: true
          routeConfig:
            name: kri_msvc_default___backend_test-port
            validateClusters: false
            virtualHosts:
            - domains:
              - '*'
              name: default_backend___msvc_80
              routes:
              - match:
                  path: /missing
                name: kri_mhttpr_default___test-origin_
                route:
                  cluster: kri_msvc_default___backend_80
                  timeout: 0s
              - match:
                  prefix: /missing/
                name: kri_mhttpr_default___test-origin_
                route:
                  cluster: kri_msvc_default___backend_80
                  timeout: 0s
              - match:
                  path: /mzms
                name: kri_mhttpr_default___test-origin_
                route:
                  cluster: kri_msvc_default___backend_80
                  requestMirrorPolicies:
                  - cluster: kri_mzsvc_default___payments-mz-mirror_80
                  timeout: 0s
              - match:
                  prefix: /mzms/
                name: kri_mhttpr_default___test-origin_
                route:
                  cluster: kri_msvc_default___backend_80
                  requestMirrorPolicies:
                  - cluster: kri_mzsvc_default___payments-mz-mirror_80
                  timeout: 0s
              - match:
                  path: /ms
                name: kri_mhttpr_default___test-origin_
                route:
                  cluster: kri_msvc_default___backend_80
                  requestMirrorPolicies:
                  - cluster: kri_msvc_default___payments-mirror_80
                    runtimeFraction:
                      defaultValue:
                        denominator: TEN_THOUSAND
                        numerator: 9990
                  timeout: 0s
              - match:
                  prefix: /ms/
                name: kri_mhttpr_default___test-origin_
                route:
                  cluster: kri_msvc_default___backend_80
                  requestMirrorPolicies:
                  - cluster: kri_msvc_default___payments-mirror_80
                    runtimeFraction:
                      defaultValue:
                        denominator: TEN_THOUSAND
                        numerator: 9990
                  timeout: 0s
              - match:
                  prefix: /
                name: 9Zuf5Tg79OuZcQITwBbQykxAk2u4fRKrwYn3//AL4Yo=
                route:
                  cluster: kri_msvc_default___backend_test-port
                  timeout: 0s
          statPrefix: default_backend___msvc_80
    metadata:
      filterMetadata:
        io.kuma.tags:
          kuma.io/unified-name: kri_msvc_default___backend_test-port
    name: outbound:127.0.0.1:10001
    trafficDirection: OUTBOUND
